--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avatar</title>
+    <title>Avatar Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:wght@100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/reset.css">
 </head>
+<!-- body -->
+
 <body>
+    <!-- header -->
     <header class="header">
         <div class="container header-container">
-            <img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="header-logo">
+            <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="header-logo"></a>
             <nav class="header-nav">
                 <ul class="header-list">
                     <li class="header-item"><a href="./index.html" class="header-link">Main</a></li>
@@ -24,12 +28,44 @@
                     <li class="header-item"><a href="#" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
+            <!-- Log in кнопка -->
             <button type="button" class="header-login">Log In</button>
         </div>
     </header>
-    <main></main>
+    <!-- main -->
+    <main>
+        <!-- Секція герой -->
+        <section class="hero">
+            <div class="container">
+                <div class="hero-textbox">
+                    <p class="hero-text">Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx 'ì'awn slu Na'viyä
+                        hapxì.
+                        Säwem nìayoeng!</p>
+                    <p class="hero-text">I'm speaking with the warrior! Your spirit goes with Eywa, your body stays
+                        behind
+                        to become part of the People. Fight with us!</p>
+                    <button type="button" class="hero-button">Join clan</button>
+                </div>
+                <!-- <address class="hero-links">
+                    <a href="https://youtube.com"></a>
+                    <a href="https://instagram."></a>
+                    <a href=""></a>
+                </address> -->
+            </div>
+        </section>
+        <!-- Перша цитата -->
+        <section class="first-quote">
+            <h2>“A lot of people from the sky are gonna come. they're</h2>
+            <h2>Gonna come like a rain that never ends."</h2>
+            <p class="quote-name">Jake Sully</p>
+        </section>
+    </main>
+    <!-- footer -->
     <footer>
-        <div class="container"></div>
+        <div class="container footer-container">
+            <!-- <img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="footer-logo">
+            <p></p> -->
+        </div>
     </footer>
 </body>
 
