Quote section added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="header-logo"></a>
             <nav class="header-nav">
                 <ul class="header-list">
-                    <li class="header-item"><a href="./index.html" class="header-link">Main</a></li>
+                    <li class="header-item"><a href="./index.html#" class="header-link">Main</a></li>
                     <li class="header-item"><a href="#" class="header-link">About Us</a></li>
                     <li class="header-item"><a href="#" class="header-link">Contacts</a></li>
                 </ul>
@@ -55,9 +55,16 @@
         </section>
         <!-- Перша цитата -->
         <section class="first-quote">
-            <h2>“A lot of people from the sky are gonna come. they're</h2>
-            <h2>Gonna come like a rain that never ends."</h2>
-            <p class="quote-name">Jake Sully</p>
+            <div class="container">
+                <h2 class="quote">“A lot of people from the sky are gonna come. they're Gonna come like a rain that
+                    never ends."</h2>
+                <p class="quote-name">Jake Sully</p>
+            </div>
+        </section>
+        <section class="trailer">
+            <div class="container">
+
+            </div>
         </section>
     </main>
     <!-- footer -->
