--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
             <!-- Log in кнопка -->
-            <button type="button" class="header-login">Log In</button>
+            <button type="button" class="header-login button">Log In</button>
         </div>
     </header>
     <!-- main -->
@@ -44,7 +44,7 @@
                     <p class="hero-text">I'm speaking with the warrior! Your spirit goes with Eywa, your body stays
                         behind
                         to become part of the People. Fight with us!</p>
-                    <button type="button" class="hero-button">Join clan</button>
+                    <button type="button" class="hero-button button">Join clan</button>
                 </div>
                 <!-- <address class="hero-links">
                     <a href="https://youtube.com"></a>
@@ -53,25 +53,77 @@
                 </address> -->
             </div>
         </section>
-        <!-- Перша цитата -->
-        <section class="first-quote">
+        <!-- firts quote -->
+        <section class="quote">
             <div class="container">
-                <h2 class="quote">“A lot of people from the sky are gonna come. they're Gonna come like a rain that
+                <h2 class="quote-text">"A lot of people from the sky are gonna come. they're Gonna come like a rain that
                     never ends."</h2>
                 <p class="quote-name">Jake Sully</p>
             </div>
         </section>
         <section class="trailer">
             <div class="container">
-
+                <button type="button" class="trailer-button button">Watch Trailer</button>
+            </div>
+        </section>
+        <!-- second quote -->
+        <section class="quote">
+            <div class="container">
+                <h2 class="quote-text">"All energy is only borrowed, and one day you have to give it back."</h2>
+                <p class="quote-name">Jake Sully</p>
+            </div>
+        </section>
+        <!-- learn Na'vi language -->
+        <section class="learn-lang">
+            <div class="container">
+                <h2 class="lang-header">Let's learn the Na'vi language</h2>
+                <ul class="lang-cards">
+                    <li class="lang-card">
+                        <p>Hello</p>
+                        <p>Kaltxì</p>
+                    </li>
+                    <li class="lang-card">
+                        <p>How Are You?</p>
+                        <p>Ngaru lu fpom srak?</p>
+                    </li>
+                    <li class="lang-card">
+                        <p>I'm Well</p>
+                        <p>Lu fpom</p>
+                    </li>
+                    <li class="lang-card">
+                        <p>Thank you</p>
+                        <p>Irayo si</p>
+                    </li>
+                    <li class="lang-card">
+                        <p>I See You</p>
+                        <p>Oel ngati kameie</p>
+                    </li>
+                    <li class="lang-card">
+                        <p>Follow me!</p>
+                        <p>Nong oet!</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- third quote -->
+        <section class="quote">
+            <div class="container">
+                <h2 class="quote-text">"Our great mother does not take sides, she protects only the balance of life."</h2>
+                <p class="quote-name">NEYTIRI</p>
             </div>
         </section>
     </main>
     <!-- footer -->
-    <footer>
-        <div class="container footer-container">
-            <!-- <img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="footer-logo">
-            <p></p> -->
+    <footer class="footer">
+        <div class="container">
+            <img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="footer-logo">
+            <!-- <hr class="footer-line"> -->
+            <address class="footer-address">
+                <p>Q&A E-mail</p>
+                <p>avatarwowqa@gmail.com</p>
+                <p>Cooperation E-mail</p>
+                <p>avatarwowcoop@gmail.com</p>
+            </address>
         </div>
     </footer>
 </body>
