--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
         <!-- firts quote -->
         <section class="quote">
             <div class="container">
-                <h2 class="quote-text">"A lot of people from the sky are gonna come. they're Gonna come like a rain that
-                    never ends."</h2>
+                <p class="quote-text">"A lot of people from the sky are gonna come. they're Gonna come like a rain that
+                    never ends."</p>
                 <p class="quote-name">Jake Sully</p>
             </div>
         </section>
+        <!-- trailer -->
         <section class="trailer">
             <div class="container">
                 <button type="button" class="trailer-button button">Watch Trailer</button>
@@ -69,7 +70,7 @@
         <!-- second quote -->
         <section class="quote">
             <div class="container">
-                <h2 class="quote-text">"All energy is only borrowed, and one day you have to give it back."</h2>
+                <p class="quote-text">"All energy is only borrowed, and one day you have to give it back."</p>
                 <p class="quote-name">Jake Sully</p>
             </div>
         </section>
@@ -108,7 +109,7 @@
         <!-- third quote -->
         <section class="quote">
             <div class="container">
-                <h2 class="quote-text">"Our great mother does not take sides, she protects only the balance of life."</h2>
+                <p class="quote-text">"Our great mother does not take sides, she protects only the balance of life."</p>
                 <p class="quote-name">NEYTIRI</p>
             </div>
         </section>
