--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <!-- header -->
+    <h1 class="visually-hidden"><h1>
     <header class="header">
         <div class="container header-container">
             <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="header-logo"></a>
@@ -38,7 +39,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-textbox">
-                    <p class="hero-text">Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx 'ì'awn slu Na'viyä
+                    <p class="hero-text hero-top">Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx 'ì'awn slu Na'viyä
                         hapxì.
                         Säwem nìayoeng!</p>
                     <p class="hero-text">I'm speaking with the warrior! Your spirit goes with Eywa, your body stays
