--- a/ua.html
+++ b/ua.html
@@ -113,9 +113,8 @@
                 <!-- third quote -->
                 <section class="quote">
                     <div class="container">
-                        <p class="quote-text">"Our great mother does not take sides, she protects only the balance of
-                            life."</p>
-                        <p class="quote-name">NEYTIRI</p>
+                        <p class="quote-text">"НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ, ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС."</p>
+                        <p class="quote-name">Нейтірі</p>
                     </div>
                 </section>
             </main>
