new footer and expirement with lang changer

--- a/index.html
+++ b/index.html
@@ -18,27 +18,35 @@
 
 <body>
     <!-- header -->
-            <header class="header">
-                <div class="container header-container">
-                    <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo"
-                            class="header-logo"></a>
-                    <nav class="header-nav">
-                        <ul class="header-list">
-                            <li class="header-item"><a href="./index.html#" class="header-link">Main</a></li>
-                            <li class="header-item"><a href="#" class="header-link">About Us</a></li>
-                            <li class="header-item"><a href="#" class="header-link">Contacts</a></li>
-                        </ul>
-                    </nav>
-                    <!-- Log in кнопка -->
-                    <button type="button" class="header-login button">Log In</button>
-                </div>
-            </header>
-            <!-- main -->
-            <main>
-                <!-- Секція герой -->
-                <section class="hero">
-                    <div class="container">
-                        <h1 class="visually-hidden">Website for an Avatar fans<h1>
+    <header class="header">
+        <div class="container header-container">
+            <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="header-logo"></a>
+            <nav class="header-nav">
+                <ul class="header-list">
+                    <li class="header-item"><a href="./index.html#" class="header-link">Main</a></li>
+                    <li class="header-item"><a href="#" class="header-link">About Us</a></li>
+                    <li class="header-item"><a href="#" class="header-link">Contacts</a></li>
+                </ul>
+            </nav>
+            <!-- Log in кнопка -->
+            <button type="button" class="header-login button">Log In</button>
+        </div>
+        <div class="change-lang">
+            <span class="cl-text">Eng</span>
+            <button type="button" class="cl-btn"><a href="./ua.html"></a></button>
+            <span class="cl-text">Ua</span>
+        </div>
+        <svg width="36" height="20" viewBox="0 0 36 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0.5" y="0.5" width="35" height="19" rx="9.5" stroke="white"/>
+            <circle cx="10" cy="10" r="6" fill="white"/>
+          </svg>
+    </header>
+    <!-- main -->
+    <main>
+        <!-- Секція герой -->
+        <section class="hero">
+            <div class="container">
+                <h1 class="visually-hidden">Website for an Avatar fans<h1>
                         <div class="hero-textbox">
                             <p class="hero-text-navi">Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx
                                 'ì'awn slu Na'viyä
@@ -55,85 +63,85 @@
                     <a href="https://instagram."></a>
                     <a href=""></a>
                 </address> -->
-                    </div>
-                </section>
-                <!-- firts quote -->
-                <section class="quote">
-                    <div class="container">
-                        <p class="quote-text">"A lot of people from the sky are gonna come. they're Gonna come like a
-                            rain that
-                            never ends."</p>
-                        <p class="quote-name">Jake Sully</p>
-                    </div>
-                </section>
-                <!-- trailer -->
-                <section class="trailer">
-                    <div class="container">
-                        <button type="button" class="trailer-button button">Watch Trailer</button>
-                    </div>
-                </section>
-                <!-- second quote -->
-                <section class="quote">
-                    <div class="container">
-                        <p class="quote-text">"All energy is only borrowed, and one day you have to give it back."</p>
-                        <p class="quote-name">Jake Sully</p>
-                    </div>
-                </section>
-                <!-- learn Na'vi language -->
-                <section class="language">
-                    <div class="container">
-                        <h2 class="lang-title">Let's learn the Na'vi language</h2>
-                        <ul class="lang-cards">
-                            <li class="lang-card">
-                                 <!-- .language-h визначає language human (Мова Людей) -->
-                                <p class="language-h arrow-left">Hello</p>
-                                <p class="language-navi">Kaltxì</p>
-                            </li>
-                            <li class="lang-card">
-                                <p class="language-h center">How Are You?</p>
-                                <p class="language-navi">Ngaru lu fpom srak?</p>
-                            </li>
-                            <li class="lang-card">
-                                <p class="language-h arrow-right">I'm Well</p>
-                                <p class="language-navi">Lu fpom</p>
-                            </li>
-                            <li class="lang-card">
-                                <p class="language-he arrow-left">Thank you</p>
-                                <p class="language-navi">Irayo si</p>
-                            </li>
-                            <li class="lang-card">
-                                <p class="language-h center">I See You</p>
-                                <p class="language-navi">Oel ngati kameie</p>
-                            </li>
-                            <li class="lang-card">
-                                <p class="language-h arrow-right">Follow me!</p>
-                                <p class="language-navi">Nong oet!</p>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-                <!-- third quote -->
-                <section class="quote">
-                    <div class="container">
-                        <p class="quote-text">"Our great mother does not take sides, she protects only the balance of
-                            life."</p>
-                        <p class="quote-name">NEYTIRI</p>
-                    </div>
-                </section>
-            </main>
-            <!-- footer -->
-            <footer class="footer">
-                <div class="container">
-                    <img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="footer-logo">
-                    <div class="footer-info">
-                        <p>Q&A E-mail -------- avatartwowqa@gmail.com</p>
-                        <p>Cooperation E-mail -------- avatartwowcoop@gmail.com</p>
-                    </div>
-                </div>
-                <div class="footer-copyright">
-                    &copy; 2023 Avatar: The Way Of Water. All rights reserved
-                </div>
-            </footer>
+            </div>
+        </section>
+        <!-- firts quote -->
+        <section class="quote">
+            <div class="container">
+                <p class="quote-text">"A lot of people from the sky are gonna come. they're Gonna come like a
+                    rain that
+                    never ends."</p>
+                <p class="quote-name">Jake Sully</p>
+            </div>
+        </section>
+        <!-- trailer -->
+        <section class="trailer">
+            <div class="container">
+                <button type="button" class="trailer-button button">Watch Trailer</button>
+            </div>
+        </section>
+        <!-- second quote -->
+        <section class="quote">
+            <div class="container">
+                <p class="quote-text">"All energy is only borrowed, and one day you have to give it back."</p>
+                <p class="quote-name">Jake Sully</p>
+            </div>
+        </section>
+        <!-- learn Na'vi language -->
+        <section class="language">
+            <div class="container">
+                <h2 class="lang-title">Let's learn the Na'vi language</h2>
+                <ul class="lang-cards">
+                    <li class="lang-card">
+                        <!-- .language-h визначає language human (Мова Людей) -->
+                        <p class="language-h arrow-left">Hello</p>
+                        <p class="language-navi">Kaltxì</p>
+                    </li>
+                    <li class="lang-card">
+                        <p class="language-h center">How Are You?</p>
+                        <p class="language-navi">Ngaru lu fpom srak?</p>
+                    </li>
+                    <li class="lang-card">
+                        <p class="language-h arrow-right">I'm Well</p>
+                        <p class="language-navi">Lu fpom</p>
+                    </li>
+                    <li class="lang-card">
+                        <p class="language-he arrow-left">Thank you</p>
+                        <p class="language-navi">Irayo si</p>
+                    </li>
+                    <li class="lang-card">
+                        <p class="language-h center">I See You</p>
+                        <p class="language-navi">Oel ngati kameie</p>
+                    </li>
+                    <li class="lang-card">
+                        <p class="language-h arrow-right">Follow me!</p>
+                        <p class="language-navi">Nong oet!</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- third quote -->
+        <section class="quote">
+            <div class="container">
+                <p class="quote-text">"Our great mother does not take sides, she protects only the balance of
+                    life."</p>
+                <p class="quote-name">NEYTIRI</p>
+            </div>
+        </section>
+    </main>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrap"> 
+                <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="footer-logo"></a>
+                <ul class="footer-info">
+                    <li class="footer-item"><span class="footer-label">Q&A E-mail</span><span class="email">avatartwowqa@gmail.com</span></li>
+                    <li class="footer-item"><span class="footer-label">Cooperation E-mail</span><span class="email">avatartwowcoop@gmail.com</span></li>
+                </ul>
+            </div>
+        </div>
+        <p class="footer-copyright">&copy; 2023 Avatar: The Way Of Water. All rights reserved</p>
+    </footer>
 </body>
 
 </html>
