--- a/ua/ua.html
+++ b/ua/ua.html
@@ -11,8 +11,8 @@
         href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <!-- body -->
 
@@ -140,7 +140,7 @@
         </div>
         <p class="footer-copyright">&copy; 2023 Avatar: The Way Of Water. All rights reserved</p>
     </footer>
-    <script src="./js/lang-switcher.js"></script>
+    <script src="../js/lang-switcher.js"></script>
 </body>
 
 </html>
