to top button test 1

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- trailer -->
         <section class="trailer">
             <div class="container">
-                <button type="button" class="trailer-button button">Watch Trailer</button>
+                <a href="https://youtu.be/d9MyW72ELq0?si=vDRnNRm6hN7KBYrL"><button type="button" class="trailer-button button">Watch Trailer</button></a>
             </div>
         </section>
         <!-- second quote -->
@@ -140,6 +140,10 @@
         </div>
         <p class="footer-copyright">&copy; 2023 Avatar: The Way Of Water. All rights reserved</p>
     </footer>
+    <a href="#" class="to-top">
+        <i class="fas fa-chevron-up"></i>
+    </a>
+    <script src="./js/to-top.js"></script>
     <script src="./js/lang-switcher.js"></script>
 </body>
 
