Final commit (definitely)

--- a/index.html
+++ b/index.html
@@ -57,11 +57,6 @@
                                 to become part of the People. Fight with us!</p>
                             <button type="button" class="hero-button button">Join clan</button>
                         </div>
-                        <!-- <address class="hero-links">
-                    <a href="https://youtube.com"></a>
-                    <a href="https://instagram."></a>
-                    <a href=""></a>
-                </address> -->
             </div>
         </section>
         <!-- firts quote -->
@@ -106,7 +101,7 @@
                         <p class="language-navi">Lu fpom</p>
                     </li>
                     <li class="lang-card">
-                        <p class="language-he arrow-left">Thank you</p>
+                        <p class="language-h arrow-left">Thank you</p>
                         <p class="language-navi">Irayo si</p>
                     </li>
                     <li class="lang-card">
