--- a/ua.html
+++ b/ua.html
@@ -24,9 +24,9 @@
             <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="header-logo"></a>
             <nav class="header-nav">
                 <ul class="header-list">
-                    <li class="header-item"><a href="./index.html#" class="header-link">Головна</a></li>
+                    <li class="header-item"><a href="./ua.html" class="header-link">Головна</a></li>
                     <li class="header-item"><a href="#" class="header-link">Про нас</a></li>
-                    <li class="header-item"><a href="#" class="header-link">Контакти</a></li>
+                    <li class="header-item"><a href="./ua.html" class="header-link">Контакти</a></li>
                 </ul>
             </nav>
             <!-- Log in кнопка -->
@@ -58,11 +58,6 @@
                                 Борись разом з нами!</p>
                             <button type="button" class="hero-button button">Приєднатися до клану</button>
                         </div>
-                        <!-- <address class="hero-links">
-                    <a href="https://youtube.com"></a>
-                    <a href="https://instagram."></a>
-                    <a href=""></a>
-                </address> -->
             </div>
         </section>
         <!-- firts quote -->
@@ -106,7 +101,7 @@
                         <p class="language-navi">Lu fpom</p>
                     </li>
                     <li class="lang-card">
-                        <p class="language-he arrow-left">Дякую</p>
+                        <p class="language-h arrow-left">Дякую</p>
                         <p class="language-navi">Irayo si</p>
                     </li>
                     <li class="lang-card">
@@ -123,7 +118,8 @@
         <!-- third quote -->
         <section class="quote">
             <div class="container">
-                <p class="quote-text">"Наша велика мати не стає на якусь сторону, вона захищає лише життевий баланс."</p>
+                <p class="quote-text">"Наша велика мати не стає на якусь сторону, вона захищає лише життевий баланс."
+                </p>
                 <p class="quote-name">Нейтірі</p>
             </div>
         </section>
